fixed overflow
There should be no more ugly bars

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,8 +1,9 @@
-html{
-    background-color: #ebeef1;
-    height: 100%;
-}
 
+html, body, .ember-view, .app, .layout, .main-content {
+    height: 100%;
+    overflow-y: scroll;
+    overflow-x: hidden;
+}
 
 button.opacity-zero{
     opacity: 0;
